--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "machine-language",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "private": true,
   "scripts": {
@@ -11,11 +10,20 @@
   "author": "",
   "license": "GPL",
   "devDependencies": {
-    "webpack": "^5.71.0",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
     "three": "^0.135.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mccap079/machine-language.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mccap079/machine-language/issues"
+  },
+  "homepage": "https://github.com/mccap079/machine-language#readme",
+  "description": ""
 }
